--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/ubuntu
 {
-	"name": "devcontainer-java-gui",
+	"name": "devcontainerJavaGUIWM",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/base:ubuntu",
 	// Features to add to the dev container. More info: https://containers.dev/features.
@@ -30,7 +30,6 @@
 				"ms-azuretools.vscode-docker",
 				"GitHub.copilot",
 				"DavidAnson.vscode-markdownlint",
-				"analytic-signal.preview-pdf",
 				"vscjava.vscode-java-pack"
 			]
 		}
